re-arrange pom for mvn build and update readme file